--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -1,6 +1,9 @@
 // Colors
 // ==========================================================================
 $grey: #333;
+$black: #003057;
+$custom: 'Roboto', sans-serif;
+$blue: #009be9;
 
 // Materialize
 // ==========================================================================
