--- a/frontend/src/styles/_default.scss
+++ b/frontend/src/styles/_default.scss
@@ -1,6 +1,72 @@
-// styles
+// Styles
+// ==========================================================================
+html, body, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-style: inherit;
+  font-weight: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  font-family: inherit;
+  color: inherit;
+  text-decoration: none;
+  list-style: none;
+  outline: 0;
+}
+html, body {
+  width: 100%;
+  height: 100%;
+  font-size: inherit;
+  color: inherit;
+  font-family: inherit;
+}
+*, *:before, *:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+canvas {
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
+.section {
+  padding: 0;
+  margin: 0;
+}
+.row {
+  padding: 0;
+  margin: 0;
+  margin-bottom: 0;
+}
+.col {
+  padding: 0;
+  margin: 0;
+}
+.text-format {
+  a {
+    color: $black;
+  }
+  p {
+    margin-bottom: 15px;
+  }
+}
 
-// responsive
+// Responsive
+// ==========================================================================
 @media #{$small-and-down} {
   // styles for small screens and down
 }
