--- a/frontend/src/styles/_header.scss
+++ b/frontend/src/styles/_header.scss
@@ -1,4 +1,87 @@
 // styles
+header#header {
+  width: 100%;
+  height: 100px;
+  position: fixed;
+  top: 0;
+  z-index: 9;
+  background: transparent;
+  box-shadow: 0 0 20px rgba(0,0,0,0);
+  @include transition(all 0.5s)
+
+  .header-inner {
+    width: 100%;
+    height: 100px;
+    display: block;
+    overflow: hidden;
+
+    .col {
+      padding: 20px 0;
+
+      &.col-branding {
+        padding: 20px 0;
+        padding-left: 80px;
+      }
+      &.col-menu {
+        .menu {
+          padding: 10px 0;
+          .item {
+            float: left;
+            a {
+              padding: 0 15px 0 0;
+              font-size: 1em;
+              line-height: 40px;
+            }
+
+          }
+        }
+      }
+      &.col-social {
+        padding: 0;
+        text-align: right;
+        padding-right: 80px;
+        ul {
+          float: right;
+        }
+      }
+      ul {
+        &.social {
+          padding: 0;
+          margin: 0;
+
+          .item {
+            width: 50px;
+            height: 50px;
+            float: left;
+            padding: 25px 0;
+            display: block;
+            position: relative;
+            img {
+              width: 100%;
+              height: auto;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  &.headroom--pinned {
+    background: white;
+    box-shadow: 0 0 20px rgba(0,0,0,0.15);
+    top: 0;
+  }
+
+  &.headroom--top {
+    background: transparent;
+    box-shadow: 0 0 20px rgba(0,0,0,0);
+    top: 0;
+  }
+
+  &.headroom--unpinned {
+    top: -120px;
+  }
+}
 
 // responsive
 @media #{$small-and-down} {
