--- a/frontend/src/styles/_section.scss
+++ b/frontend/src/styles/_section.scss
@@ -1,5 +1,233 @@
 // styles
+.background {
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: absolute;
+  overflow: hidden;
+  top: 0;
+  z-index: 1;
 
+  .cover {
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: relative;
+
+    img {
+      width: 100%;
+      height: auto;
+    }
+  }
+
+}
+.section-chapter {
+  .section-inner {
+    width: 100%;
+    padding: 20px 40px;
+    &:after {
+      content: " ";
+      display: block;
+      position: relative;
+      clear: both;
+    }
+    .title {
+      font-size: 2.5em;
+      color: $blue;
+      width: 33.33%;
+      float: left;
+      text-align: right;
+      padding-right: 20px;
+    }
+    .content {
+      width: 66.66%;
+      float: right;
+
+      .body {
+        font-weight: lighter;
+        margin-bottom: 40px;
+      }
+      .principal {
+        margin-bottom: 80px;
+      }
+      .axe {
+        font-weight: bolder;
+      }
+      .example {
+        color: $blue;
+        font-weight: bolder;
+      }
+      .conclusion {
+        font-style: italic;
+      }
+    }
+  }
+}
+.section-introduction {
+  padding: 40px;
+  display: block;
+  width: 100%;
+  position: relative;
+
+  .section-inner {
+    .body {
+      font-size: 2.5em;
+    }
+  }
+}
+.section-candidates {
+  margin-top: 20px;
+  position: relative;
+
+  .section-inner {
+    width: calc(100% + 20px);
+    margin-left: -10px;
+    display: block;
+
+    .candidate {
+      width: 25%;
+      padding: 0 10px;
+      float: left;
+
+      .inner {
+        width: 100%;
+        @include aspect-ratio(800,1000);
+        top: 0;
+        left: 0;
+        display: block;
+        position: relative;
+        border-radius: 10px;
+        overflow: hidden;
+        z-index: 2;
+
+        .content {
+          width: 100%;
+          height: 100%;
+          display: block;
+          position: absolute;
+          top: 0;
+          left: 0;
+          background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.5));
+          z-index: 2;
+
+          .title {
+            position: absolute;
+            bottom: 0;
+            margin: 20px;
+            writing-mode: vertical-rl;
+            text-orientation: mixed;
+            padding: 10px 0;
+            color: white;
+            display: inline-block;
+            font-size: 1.5em;
+            border-bottom: 4px solid $blue;
+          }
+        }
+      }
+    }
+  }
+}
+.section-page {
+  margin-bottom: 80px;
+  .section-inner {
+    .col {
+      padding: 0;
+    }
+    .col-image {
+      @include aspect-ratio(800, 1000);
+      border-radius: 10px;
+      overflow: hidden;
+    }
+    .col-content {
+      padding: 40px;
+      h1 {
+        font-size: 2.5em;
+        margin-bottom: 20px;
+      }
+      .body {
+        margin-bottom: 20px;
+        font-weight: lighter;
+      }
+      .citation {
+        color: $blue;
+        font-weight: bolder;
+      }
+      .character {
+        font-weight: bolder;
+      }
+    }
+  }
+}
+.section-banner {
+  width: 100%;
+  height: auto;
+  @include aspect-ratio(800, 400);
+  overflow: hidden;
+  border-radius: 10px;
+  box-shadow: 0 0 40px rgba(0,0,0,0.25);
+
+  .section-inner {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    display: table;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.5));
+
+    .col {
+      height: 100%;
+      display: table-cell;
+      vertical-align: bottom;
+      float: none;
+      color: white;
+      padding: 40px;
+
+      &.col-files {
+        .files {
+          .item {
+            padding: 10px;
+            border: 1px solid white;
+            border-radius: 10px;
+            font-size: 1.15em;
+            margin-bottom: 10px;
+            i {
+              font-size: 1.25em;
+              font-size: inherit;
+              color: $blue;
+              padding-right: 5px;
+            }
+            &:hover {
+              background: white;
+              color: $black;
+            }
+          }
+        }
+      }
+
+      h1 {
+        font-size: 2.5em;
+        line-height: 1.4;
+        display: inline-block;
+        padding-top: 20px;
+      }
+      .body {
+        width: 50%;
+        border-top: 4px solid $blue;
+        padding-top: 20px;
+      }
+      span {
+        border-bottom: 4px solid $blue;
+        color: white;
+      }
+      i {
+        font-size: 0.75em;
+        color: $blue;
+      }
+    }
+  }
+}
 // responsive
 @media #{$small-and-down} {
   // styles for small screens and down
