--- a/frontend/src/styles/_header.scss
+++ b/frontend/src/styles/_header.scss
@@ -85,7 +85,49 @@ header#header {
 
 // responsive
 @media #{$small-and-down} {
-  // styles for small screens and down
+  header#header {
+    height: 80px;
+
+    .header-inner {
+      height: 80px;
+      &:after {
+        content: " ";
+        width: 100%;
+        display: block;
+        clear: both;
+      }
+
+      .col {
+        padding: 10px 0;
+
+        &.col-branding {
+          padding: 10px 0;
+          padding-left: 20px;
+        }
+        &.col-menu {
+          display: none;
+        }
+        &.col-social {
+          padding-right: 0;
+          float: right;
+          ul {
+          }
+        }
+        ul {
+          &.social {
+            padding: 0;
+            margin: 0;
+
+            .item {
+              width: 40px;
+              height: 40px;
+              padding: 20px 0;
+            }
+          }
+        }
+      }
+    }
+  }
 }
 @media #{$medium-and-up} {
   // styles for medium screens and larger
