--- a/frontend/src/styles/_section.scss
+++ b/frontend/src/styles/_section.scss
@@ -232,7 +232,7 @@
     height: 100%;
     position: absolute;
     display: table;
-    top: 0;
+    bottom: 0;
     left: 0;
     z-index: 1;
     background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.5));
